making triggers pluggable

--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -3,7 +3,12 @@ FROM alpine:3.7
 
 COPY dist/sensor-controller /
 
-COPY dist/signal-plugin /
+# todo: specify the directory for all the signal plugins
 ENV SIGNAL_PLUGIN=/signal-plugin
+COPY dist/signal-plugin /
+
+# todo: specify the directory for all the trigger plugins
+ENV TRIGGER_PLUGIN=/trigger-plugin
+COPY dist/trigger-plugin /
 
 CMD [ "/sensor-controller" ]
